# github-tui-explorer

./: Cargo.toml  README.md
src/: app.rs  events.rs  github.rs  main.rs  models.rs  ui.rs  utils.rs
