[package]
name = "github-tui-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
dotenvy = "0.15.7"
ratatui = "0.29.0"
reqwest = { version="0.12.23", features = ["json", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
